--- a/settings/index.html
+++ b/settings/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-    <iframe id="settings-container" src="http://127.0.0.1:3002/settings.html?settingsJson=https://nuttylmao.github.io/multichat-overlay/settings/settings.json"></iframe>
+    <iframe id="settings-container" src="http://nuttylmao.github.io/widget-customizer?settingsJson=https://nuttylmao.github.io/multichat-overlay/settings/settings.json"></iframe>
 
     <div id="widget-container">
         <span id="widgetURL">
