--- a/settings/index.html
+++ b/settings/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
     <style>
         body {
-            margin: 0; /* Remove default body margin */
-            display: flex; /* Use flexbox for layout */
+            margin: 0;
+            /* Remove default body margin */
+            display: flex;
+            /* Use flexbox for layout */
         }
 
         #settings-container {
-            width: 600px; /* 50% of viewport width */
-            min-width: 600px; /* 50% of viewport width */
-            height: 100vh; /* 100% of viewport height */
-            border: none; /* Remove default iframe border */
+            width: 600px;
+            /* 50% of viewport width */
+            min-width: 600px;
+            /* 50% of viewport width */
+            height: 100vh;
+            /* 100% of viewport height */
+            border: none;
+            /* Remove default iframe border */
         }
 
         #widget-container {
-            flex-grow: 1; /* Allow the content-container to take up remaining space */
+            flex-grow: 1;
+            /* Allow the content-container to take up remaining space */
             height: 100vh;
         }
 
@@ -31,23 +39,26 @@
         .content-container {
             width: 50vw;
             height: 100vh;
-            background-color: #f0f0f0; /* Example background for right side */
+            background-color: #f0f0f0;
+            /* Example background for right side */
             padding: 20px;
-            box-sizing: border-box; /* Include padding in width/height */
+            box-sizing: border-box;
+            /* Include padding in width/height */
         }
     </style>
 </head>
+
 <body>
 
-    <iframe id="settings-container" src="http://nuttylmao.github.io/widget-customizer?settingsJson=https://nuttylmao.github.io/multichat-overlay/settings/settings.json"></iframe>
+    <iframe id="settings-container"
+        src="http://nuttylmao.github.io/widget-customizer?settingsJson=https://nuttylmao.github.io/multichat-overlay/settings/settings.json"></iframe>
 
     <div id="widget-container">
-        <span id="widgetURL">
-        </span>
-        <iframe id="widget" src="http://www.example.com"></iframe>
+        <iframe id="widget"></iframe>
     </div>
 
     <script src="script.js"></script>
 
 </body>
+
 </html>
