--- a/settings/index.html
+++ b/settings/index.html
@@ -11,6 +11,7 @@
             /* Remove default body margin */
             display: flex;
             /* Use flexbox for layout */
+            background: #181818;
         }
 
         #settings-container {
