--- a/settings/index.html
+++ b/settings/index.html
@@ -51,8 +51,7 @@
 
 <body>
 
-    <iframe id="settings-container"
-        src="http://nuttylmao.github.io/widget-customizer?settingsJson=https://nuttylmao.github.io/multichat-overlay/settings/settings.json"></iframe>
+    <iframe id="settings-container"></iframe>
 
     <div id="widget-container">
         <iframe id="widget"></iframe>
